# Komodo

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_project_files.py
example/: CMakeLists.txt
example/res/shaders/: test.frag.glsl  test.vert.glsl
example/src/: main.cpp
src/komodo/: komodo.hpp
src/komodo/backend/glfw/instance/: glfw_instance.cpp  glfw_instance.hpp  glfw_instance_count.cpp  glfw_instance_count.hpp
src/komodo/backend/glfw/window/: glfw_window.cpp  glfw_window.hpp  glfw_window_count.cpp  glfw_window_count.hpp  glfw_window_position.cpp  glfw_window_position.hpp
src/komodo/backend/opengl/instance/: opengl_instance.cpp  opengl_instance.hpp
src/komodo/backend/opengl/shader/: opengl_shader.cpp  opengl_shader.hpp
src/komodo/backend/opengl/window/: opengl_window.cpp  opengl_window.hpp  opengl_window_title.cpp  opengl_window_title.hpp
src/komodo/backend/vulkan/debug/: vulkan_assert.hpp  vulkan_call.hpp  vulkan_debug_messenger.cpp  vulkan_debug_messenger.hpp  vulkan_exception.hpp  vulkan_validation_layers.cpp  vulkan_validation_layers.hpp
src/komodo/backend/vulkan/instance/: vulkan_device.cpp  vulkan_device.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_instance_data.hpp  vulkan_instance_extensions.cpp  vulkan_instance_extensions.hpp  vulkan_physical_device.cpp  vulkan_physical_device.hpp  vulkan_queue_family_indices.cpp  vulkan_queue_family_indices.hpp  vulkan_temp_surface.cpp  vulkan_temp_surface.hpp
src/komodo/backend/vulkan/shader/: vulkan_shader.cpp  vulkan_shader.hpp  vulkan_shader_data.hpp
src/komodo/backend/vulkan/window/: vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_swapchain_support.cpp  vulkan_swapchain_support.hpp  vulkan_window.cpp  vulkan_window.hpp  vulkan_window_data.hpp  vulkan_window_title.cpp  vulkan_window_title.hpp
src/komodo/debug/: assert.hpp  exception.hpp
src/komodo/include/: komodo.hpp
src/komodo/include/komodo/: komodo.hpp
src/komodo/instance/: instance.hpp
src/komodo/shader/: buffer_element.cpp  buffer_element.hpp  buffer_layout.cpp  buffer_layout.hpp  shader.cpp  shader.hpp  shader_create_info.hpp  shader_data_type.cpp  shader_data_type.hpp  shader_reflection.cpp  shader_reflection.hpp  spv_modules.hpp
src/komodo/src/: komodo.cpp
src/komodo/utils/: concat.hpp  file_reader.cpp  file_reader.hpp
src/komodo/window/: window.cpp  window.hpp  window_create_info.hpp
src/lib/glad/: CMakeLists.txt
src/lib/glad/include/glad/: gl.h
